--- a/package.json
+++ b/package.json
@@ -10,11 +10,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.8.2",
     "date-fns": "^3.6.0",
     "react": "^18.3.1",
     "react-big-calendar": "^1.13.0",
+    "react-datepicker": "^4.8.0",
     "react-dom": "^18.3.1",
-    "react-router-dom": "6"
+    "react-modal": "^3.15.1",
+    "react-redux": "^8.0.2",
+    "react-router-dom": "6",
+    "sweetalert2": "^11.4.17"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
