--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.2",
+    "axios": "^1.7.7",
     "date-fns": "^3.6.0",
     "react": "^18.3.1",
     "react-big-calendar": "^1.13.0",
